[gd_scene load_steps=9 format=3 uid="uid://dy6kuefycstc5"]

[ext_resource type="Script" path="res://Scripts/SpellPrefabs/FrostRadius.gd" id="1_cntvn"]
[ext_resource type="Texture2D" uid="uid://cvtl2of3v7was" path="res://textures/Particles/PNG (Transparent)/magic_05.png" id="2_1cnyv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_im155"]
radius = 0.4

[sub_resource type="Curve" id="Curve_mofqh"]
min_value = -200.0
max_value = 0.0
_data = [Vector2(0.0115274, 107.368), 0.0, 0.0, 0, 0, Vector2(0.0864553, -4.21053), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pm46f"]
curve = SubResource("Curve_mofqh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gftpl"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, 0)
gravity = Vector3(1, 0.5, 0)
linear_accel_max = 7.27
radial_accel_min = 1.0
radial_accel_max = 2.0
radial_accel_curve = SubResource("CurveTexture_pm46f")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_phcvc"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.807843, 1, 1, 1)
albedo_texture = ExtResource("2_1cnyv")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_k8b50"]
material = SubResource("StandardMaterial3D_phcvc")

[node name="FrostRadius" type="Area3D"]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_cntvn")
starting_size = 0.4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_im155")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="FrostRing" type="GPUParticles3D" parent="."]
amount = 50
lifetime = 2.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_gftpl")
draw_pass_1 = SubResource("QuadMesh_k8b50")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
